add heading and style to container

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,13 +16,26 @@
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.https://github.com/NyaunchoDavid/Skills.gitbootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/styles.css">
   <title>Skills</title>
 </head>
 
 <body>
+  <div class="container">
+    <div class="tops">
+      <h1 class="text-center">Skills Profile Widget</h1>
+    </div>
+    <div class="container carry">
+    <div class="row">
+      <div class="main-row">
+        <div class="meme">
 
+          </div>
+      </div>
+    </div>
+    </div>
+  </div>
 </body>
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
