add style to class carry and meme

--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="tops">
       <h1 class="text-center">Skills Profile Widget</h1>
     </div>
     <div class="container carry">
     <div class="row">
-      <div class="main-row">
         <div class="meme">
 
           </div>
-      </div>
     </div>
     </div>
   </div>
