--- a/index.html
+++ b/index.html
@@ -16,23 +16,55 @@
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Latest compiled JavaScript -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://maxcdn.https://github.com/NyaunchoDavid/Skills.gitbootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="css/styles.css">
   <title>Skills</title>
 </head>
 
 <body>
-  <div class="container-fluid">
+  <div class="container-fluid trend">
     <div class="tops">
       <h1 class="text-center">Skills Profile Widget</h1>
     </div>
     <div class="container carry">
-    <div class="row">
+      <div class="row">
         <div class="meme">
-
-          </div>
+        </div>
+      </div>
+      <h2 class="text-center">Nyauncho David</h2>
+      <p class="text-center">Web Developer</p>
+      <h3 class="title">Skills</h3>
+      <h4>HTML</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+      </div>
+      <h4>CSS</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+      </div>
+      <h4>Bootstrap</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+      </div>
+      <h4>JavaScript</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+      </div>
+      <h4>Jquery</h4>
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+      </div>
+      <div class="soc">
+        <a href="#" <i class="fa fa-facebook"></i></a>
+        <a href="#" <i class="fa fa-instagram"></i></a>
+        <a href="#" <i class="fa fa-twitter"></i></a>
+        <a href="#" <i class="fa fa-linkedin"></i></a>
+      </div>
     </div>
-    </div>
+    <div class="copyright">
+			<p id="last" class="text-center"> &copy 2019 Skills Profile Widget . All rights reserved | Design by Nyauncho David</p>
+		</div>
   </div>
 </body>
 <!-- JQuery -->
