--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       <h2 class="text-center">Nyauncho David</h2>
       <p class="text-center">Web Developer</p>
       <h3 class="title">Skills</h3>
-      <h4>HTML</h4>
+      <h4>HTML5</h4>
       <div class="progress">
         <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
       </div>
-      <h4>CSS</h4>
+      <h4>CSS3</h4>
       <div class="progress">
         <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
       </div>
@@ -56,10 +56,10 @@
         <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
       </div>
       <div class="soc">
-        <a href="#" <i class="fa fa-facebook"></i></a>
-        <a href="#" <i class="fa fa-instagram"></i></a>
-        <a href="#" <i class="fa fa-twitter"></i></a>
-        <a href="#" <i class="fa fa-linkedin"></i></a>
+        <a href="#" <i class="fa fa-facebook" style="color:#26a0da;"></i></a>
+        <a href="#" <i class="fa fa-instagram" style="color:#ea384d;"></i></a>
+        <a href="#" <i class="fa fa-twitter" style="color:#26a0da;"></i></a>
+        <a href="#" <i class="fa fa-linkedin" style="color:#0077b5;"></i></a>
       </div>
     </div>
     <div class="copyright">
