--- a/index.html
+++ b/index.html
@@ -37,29 +37,29 @@
       <h3 class="title">Skills</h3>
       <h4>HTML5</h4>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><span class="dif">100%</span></div>
       </div>
       <h4>CSS3</h4>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"><span class="dif">90%</span></div>
       </div>
       <h4>Bootstrap</h4>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"><span class="dif">80%</span></div>
       </div>
       <h4>JavaScript</h4>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"><span class="dif">75%</span></div>
       </div>
       <h4>Jquery</h4>
       <div class="progress">
-        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><span class="dif">70%</span></div>
       </div>
       <div class="soc">
-        <a href="#" <i class="fa fa-facebook" style="color:#26a0da;"></i></a>
-        <a href="#" <i class="fa fa-instagram" style="color:#ea384d;"></i></a>
-        <a href="#" <i class="fa fa-twitter" style="color:#26a0da;"></i></a>
-        <a href="#" <i class="fa fa-linkedin" style="color:#0077b5;"></i></a>
+        <a href="#" <i class="fa fa-facebook" style="color:#fff;"></i></a>
+        <a href="#" <i class="fa fa-instagram" style="color:#fff;"></i></a>
+        <a href="#" <i class="fa fa-twitter" style="color:#fff;"></i></a>
+        <a href="#" <i class="fa fa-linkedin" style="color:#fff;"></i></a>
       </div>
     </div>
     <div class="copyright">
