--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <div class="progress-bar progress-bar-striped progress-bar-animated bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"><span class="dif">70%</span></div>
       </div>
       <div class="soc">
-        <a href="#" <i class="fa fa-facebook" style="color:#fff;"></i></a>
-        <a href="#" <i class="fa fa-instagram" style="color:#fff;"></i></a>
-        <a href="#" <i class="fa fa-twitter" style="color:#fff;"></i></a>
-        <a href="#" <i class="fa fa-linkedin" style="color:#fff;"></i></a>
+        <a href="https://web.facebook.com/david.chuchoh" <i class="fa fa-facebook" style="color:#fff;"></i></a>
+        <a href="https://www.instagram.com/donchuchoh/" <i class="fa fa-instagram" style="color:#fff;"></i></a>
+        <a href="https://www.instagram.com/donchuchoh/" <i class="fa fa-twitter" style="color:#fff;"></i></a>
+        <a href="https://web.facebook.com/david.chuchoh" <i class="fa fa-linkedin" style="color:#fff;"></i></a>
       </div>
     </div>
     <div class="copyright">
